# Esp32-Firebase-Qt

./: Main.ino  README.md
Esp32_DHT11_QtChart/: CMakeLists.txt  Main.qml  README.md  main.cpp
